fixed the bug that makes the an empty column collaps

--- a/Checkers/stylesheet/stylesheet.css
+++ b/Checkers/stylesheet/stylesheet.css
@@ -26,8 +26,10 @@ table:hover{
 td {
     border: 3px solid black; 
     text-align: center;
-    height: 4rem;
-    width: 4rem;
+    height: 4.2rem;
+    width: 4.2rem;
+    min-height: 4.2rem;
+    min-width: 4.2rem;
     background-color: white;
     color: #060606;
 }
